--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -806,7 +806,25 @@ $$
 
 [We can use the superposition principle to build models that have different kinds of components. The main idea is to think about what is the general structure we want for the forecast function and then isolate the different components of the forecast function and think about the classes of dynamic linear models that are represented in each of those components.]{.mark} Each of those components has a class and then we can build the general dynamic linear model with all those pieces together using this principle.
 
+Two references for the Superposition principle are
+
+- [@west2013bayesian §3.1 p. 98]
+- [@prado2010time §4.2.1 p. 136]
+
+::: {#imp-superposition .callout-important}
+
+## Superposition Principle
+
+In the first the author state:
+
+> Conditional independence also features strongly in initial model building and in choosing an appropriate parametrisation. For example, the linear superposition principle states that any linear combination of deterministic linear models is a linear model. This extends to a normal linear superposition principle:
+>
+> [Any linear combination of independent normal DLMs is a normal DLM.]{.mark} - > -- [@west2013bayesian §3.1 p. 98]
+
+:::
+
 We will illustrate how to do that with an example:
+
 Let's say that we want to create a model here with a forecast function that has a linear trend component. Let's say we have a linear function as a function of the number of steps ahead that you want to consider. Then suppose you also have a covariate here that you want to include in your model as a regression component.
 $$
 f_t(h) = \underbrace{(k_{t,0} + k_{t,1}\; h)}_{\text{linear trend component}} + \underbrace{(k_{t,2}\; x_{t+h})}_{\text{regression component}}
@@ -820,7 +838,6 @@ where:
 
 When we look at the forecast function, we can isolate a linear trend and a regression components as indicated.
 Each of these can be set in terms of two forecast functions]{.mark}. I'm going to call the forecast function $f_{1,t}(h)$, this is just the first piece.
-
 
 $$
 \begin{aligned}
@@ -948,7 +965,8 @@ $$
 
 ### General Case
 
-The general case wasn't covered in the video and we didn't have a proper statement of the superposition principle.
+The general case wasn't covered in the video and we didn't have a proper statement of the superposition principle. However, in [@imp-superposition] I extracted the statement of the principle above. This statement clarifies that the principle arrises via conditional independence, a tool we also used extensively in the previous couse on mixture models. 
+Now let us consider the general case from the handout.
 
 Assume that you have a time series process $y_t$ with a forecast function
 
@@ -985,14 +1003,13 @@ Omitted due to Coursera honor code
 
 <!-- TODO: use a conditional block here -->
 
-
 # Bayesian Inference in the NDLM: Part 1
 
 ## Filtering (Video)
 
-![deriving the Prior and Forecast at Time t](images/m3_0041.png){.column-margin width="250px" group="slides"}
+![Derivation for the Prior and Forecast at Time t](images/m3_0041.png){.column-margin width="250px" group="slides"}
 
-![deriving the Posterior at Time t](images/m3_0042.png){.column-margin width="250px" group="slides"}
+![Derivation of the Posterior at Time t](images/m3_0042.png){.column-margin width="250px" group="slides"}
 
 [We will now delve into Bayesian inference in the case of the normal dynamic linear model where both the observational variance and the system variance are known. We will talk about filtering equations, smoothing equations and also forecasting in this setting using Bayesian approach.].{.mark}
 
@@ -1105,17 +1122,68 @@ Then, we can obtain the following distributions:
   \end{aligned}
   $$
 
-  These can be derived using Normal theory or via Bayes' theorem. Both are shown in [@west2013bayesian]
-
+  These can be derived via Normal theory or via the Multivariate Bayes' theorem. The background for both seems to be provided in [@west2013bayesian sec 17.2.2-3 p.639]
 
 Now, denoting $e_t = (y_t - f_t)$ and $A_t = R_t F_t q_t^{-1}$, we can rewrite the equations above as:
 
-  $$
+
+It follows that 
+
+$$
+\left(
+\begin{aligned}
+Y \\
+\theta
+\end{aligned}
+\right) \sim N
+\left(
+\begin{aligned}
+(F'a) \\
+a
+\end{aligned}
+\right),
+\left(
+\begin{aligned}
+(F'RF + V F'R) \\
+RF R
+\end{aligned}
+\right)
+$$
+
+Therefore, identifying Y with X1 and θ with X2 in the partition of X in 17.2.2, we have
+RF R
+)]
+
+
+Therefore, identifying Y with X1 and θ with X2 in the partition of X in 17.2.2, we have
+$$
+Y ∼ N[F′a, F′RF + V]
+$$
+
+$$
+(θ | Y) ∼ N[m, C],
+$$
+
+where
+
+
+
+$$
+m = a + RF[F′RF + V]−1[Y − F′a]
+$$
+
+and
+$$
+C = R − RF[F′RF + V]−1F′R.
+$$
+
+
+$$
   \begin{aligned}
   m_t &= a_t + A_t e_t, \\
   C_t &= R_t - A_t q_t A_t'
   \end{aligned}
-  $$
+$$
 
 ::: {.callout-note collapse="true"}
 ## Video Transcript
