fixed some notations

--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -1192,14 +1192,14 @@ y_t &= F_t' \theta_t + \nu_t, \quad \nu_t \sim  \mathcal{N}(0, v_t), \\
 \end{aligned}
 $$ {#eq-generic-NDLM}
 
-with $F_t$, $G_t$, $v_t$, and $W_t$ known. We also assume a prior distribution of the form $(\theta_0 \mid D_0) \sim  \mathcal{N}(m_0, C_0)$, with $m_0$, $C_0$ known.
+with $F_t$, $G_t$, $v_t$, and $W_t$ known. We also assume a prior distribution of the form $(\theta_0 \mid \mathcal{D}_0) \sim  \mathcal{N}(m_0, C_0)$, with $m_0$, $C_0$ known.
 
 #### Filtering
 
-We are interested in finding $p(\theta_t \mid D_t)$ for all $t$. Assume that the posterior at $t-1$ is such that:
+We are interested in finding $p(\theta_t \mid \mathcal{D}_t)$ for all $t$. Assume that the posterior at $t-1$ is such that:
 
 $$
-(\theta_{t-1} \mid D_{t-1}) \sim  \mathcal{N}(m_{t-1}, C_{t-1}).
+(\theta_{t-1} \mid \mathcal{D}_{t-1}) \sim  \mathcal{N}(m_{t-1}, C_{t-1}).
 $$ {#eq-filtering}
 
 Then, we can obtain the following:
@@ -1207,7 +1207,7 @@ Then, we can obtain the following:
 1. Prior at Time $t$
 
 $$
-(\theta_t \mid D_{t-1}) \sim  \mathcal{N}(a_t, R_t),
+(\theta_t \mid \mathcal{D}_{t-1}) \sim  \mathcal{N}(a_t, R_t),
 $$
 
 with
