--- a/C4-L06.qmd
+++ b/C4-L06.qmd
@@ -32,15 +32,32 @@ format:
 
 Here is where I can collect questions about TS analysis that I have as I go through the course. Hopefully I will be better equipped to answer many of these  them by the end of the course.
 
-1. How does Bayesian TS analysis differ from regular TS analysis?
+1. How is Bayesian TS analysis differ from regular TS analysis?
+   - In the NDLM we supply a Prior.
+   - We the use Bayesian updating to update the model with the data.
+   - We maintian a distributional view with estimates of the error.
+   - We also the use Bayesian updating and inference for Filtering, Smoothing.
 1. Fourier analysis is a powerful tool for time series analysis. How does it relate to Bayesian time series analysis?
+   - We can incorporate the outcomes to incorporate seasonal elements into an NDLM
 1. How and what type of prior knowledge into time series analysis?
+   - In [@west2013bayesian] they authors discuss both  is the actual prior.
+   - But they aslo talk about supporting interventions. E.g. when a major competitor goes out of buisness.The model should be able to handle this information and they make a big issues of how we need to incorporate into the next time step both new expected demand as well as an estimate of its variance which give better estimates of required production.
 1. Are there models that are unique to Bayesian time series analysis?
+   - Hard to say but DLM seem to be.
 1. How does *distributional* thinking affect time series analysis?
+   - It gives us confidence bounds on future estimates.
 1. How do we represent *uncertainty* in Bayesian time series analysis?
-1. Will we learn about Gaussian Processes in this course?
+   - We have distribution and we can derive for any point estimate a correspoing creadible interval.
+   - We can use smoothing to try and reason about trend or seasonality seperately.
+1. Will we learn about Gaussian Processes/Neural Networks in this course?
+   - This is a type of Bayesian Non-parametric and we don't cover these in the specilization. However Abel Rodriguez, the instructor of the third couse on mixture model has a [short course](https://users.soe.ucsc.edu/~abel/website/Teaching.html) 
+   - Herbert Lee wrote a [Bayesian Nonparametrics via Neural Networks](https://www.amazon.com/Bayesian-Nonparametrics-Networks-Statistics-Probability/dp/0898715636) on the subject. 
 1. What BTS models are most useful in economics and finance?
 1. Is there a cleanup procedure for time series data?
+   - Using exponential smoothing
+   - Using weighted avaraging going back and forward enough steps can smooth seasonal  effects.
+   - More generaly this is handled by smoothing
+   - Going backwards this is can be done using filtering.
 1. Is there an Bayesian EDA for time series?
    - we can use differencing to make the time series stationary
    - we can use the ACF and PACF 
@@ -69,10 +86,10 @@ Here is where I can collect questions about TS analysis that I have as I go thro
    - the book also toches on EKF and MKF
 1. Particle filters AKA Sequential Monte Carlo methods in the book.
    - see [@prado2023time p. 205]
-1. Are there bayesian time series models of contagion? 
-1. Are there bayesian time series models of epidemics?
-1. What are seasonal adjustment?
-1. How to do seasonal adjustment?
+1. Are there Bayesian time series models of contagion? 
+1. Are there Bayesian time series models of epidemics?
+1. What are Seasonal adjustments?
+1. How to do a seasonal adjustment?
 1. What are the tools for wrangling and cleaning TS data.
    - [Data Engineering using Wrangling and Cleaning](https://www.youtube.com/watch?v=JZxNvVi1UfA) c.f. [@woodward2022time § 1.4.1.3]
 1. How to use the frequency domain as a key part of understanding and analyzing data?
@@ -120,18 +137,18 @@ Here is where I can collect questions about TS analysis that I have as I go thro
 1. What is smoothing in BTS
    - decomposing the series as a sum of two components: a smooth component, plus another component that includes all the features  that are unexplained by the smooth component.
    - one way is to use a moving average.
-   - in the bayesian context smoothing is the process of estimating the hidden states of a system given the observed data.
+   - in the Bayesian context smoothing is the process of estimating the hidden states of a system given the observed data.
 1. What is filtering in Bayesian Time Series?
-   - in the bayesian context filtering is the process of estimating the hidden states of a system given the observed data.
+   - in the Bayesian context filtering is the process of estimating the previous hidden states of a system given the observed data. I.e. a retrospective analysis to understand the process better 
 
-   - we want to sample $p(/theta_t,k|\mathcal{D}_t)$ 
+   - we want to sample $p(\theta_t,k \mid \mathcal{D}_t)$ 
 1. What is the Kalman filter?
    - see [@prado2023time p. 141] 
    - the book also toches on EKF and MKF
 1. What is a particle filter?
    - see [@prado2023time § 6.2.2] on the The Auxiliary Particle Filter
-1. what is the [Butterworth filter](https://en.wikipedia.org/wiki/Butterworth_filter)?
-   - The Butterworth filter is a signal processing filter that has a flat response in passband (or as close as possible to flat)
+1. What is the [Butterworth filter](https://en.wikipedia.org/wiki/Butterworth_filter)?
+   - The Butterworth filter is a signal processing filter that has a flat response in passband (or as close as possible to flat) - making it good for cleaning up noise !?
 
 ### Models:
 
