added label to dists.qmd and added environment.txt

--- a/dists.qmd
+++ b/dists.qmd
@@ -4,6 +4,7 @@ title: "dists"
 # CMF
 
 ```{python}
+#| label: dists-1
 import bokeh.io
 bokeh.io.output_notebook(hide_banner=True)
 
@@ -42,6 +43,7 @@ bokeh.io.show(p)
 # CMF
 
 ```{python}
+#| label: dists-2
 bokeh.io.output_notebook(hide_banner=True)
 x = np.arange(0, 11)
 y = st.binom.cdf(x, 10, 0.5)
@@ -62,6 +64,7 @@ bokeh.io.show(p)
 # Linked plots
 
 ```{python}
+#| label: dists-3
 from bokeh.layouts import gridplot
 from bokeh.models import ColumnDataSource
 from bokeh.plotting import figure, show
@@ -91,6 +94,7 @@ show(gridplot([[left, right]]))
 
 
 ```{python}
+#| label: dists-4
 import numpy as np
 import scipy.stats as st
 
@@ -124,6 +128,7 @@ show(p)
 ```
 
 ```{javascript}
+#| label: dists-5
 
 function betacf(x, a, b) {
     // From Andreas Madsen's mathfn, Copyright (c) 2013 Andreas Madsen
@@ -197,6 +202,7 @@ function incomplete_beta(x, a, b) {
 ```
 
 ```{python}
+#| label: dists-6
 import numpy as np
 import scipy.special
 import scipy.stats as st
@@ -238,6 +244,7 @@ show(gridplot([p1], ncols=1, width=400, height=400, toolbar_location=None))
 ```
 # LogNormal
 ```{python}
+#| label: dists-7
 bokeh.io.output_notebook(hide_banner=True)
 
 # Log-Normal Distribution
@@ -314,6 +321,7 @@ For (k, θ) parameterization: θ is a reciprocal of the event rate λ, which is 
 For (α, β) parameterization: Using our notation k (the # of events) & λ (the rate of events), simply substitute α with k, β with λ. The PDF stays the same format as what we’ve derived.
 
 ```{python}
+#| label: dists-8
 
 bokeh.io.output_notebook(hide_banner=True)
 
@@ -336,6 +344,7 @@ show(gridplot([p3], ncols=1, width=400, height=400, toolbar_location=None))
 
 
 ```{python}
+#| label: dists-9
 import numpy as np
 from scipy.stats import gamma
 import matplotlib.pyplot as plt
@@ -372,6 +381,7 @@ plot_gamma_k()
 ```
 
 ```{python}
+#| label: dists-10
 
 def plot_gamma_lambda():
     """
@@ -418,6 +428,7 @@ Say you wait for two multi-step processes to happen. The individual steps of eac
 4. The conversion rate for buyers actually purchasing from your website.
 5. The  survival chance of a person having blood cancer.
 ```{python}
+#| label: dists-11
 #from numpy.random import default_rng
 bokeh.io.output_notebook(hide_banner=True)
 # Beta Distribution
@@ -446,6 +457,7 @@ Distribution of $x = y^\beta$ if $y\sim exp()$. For $\beta > 1$, the longer we h
 .
 Example. This is a model for aging. The longer an organism lives, the more likely it is to die.
 ```{python}
+#| label: dists-12
 bokeh.io.output_notebook(hide_banner=True)
 # Weibull Distribution
 
@@ -476,6 +488,7 @@ Say you wait for two multistep Poisson processes to arive. The individual steps 
 
 
 ```{python}
+#| label: dists-13
 bokeh.io.output_notebook(hide_banner=True)
 from scipy.stats import pareto
 
@@ -504,6 +517,7 @@ show(gridplot([p6], ncols=1, width=400, height=400, toolbar_location=None))
 In statistics, the Generalized Pareto Distribution (GPD) is a family of continuous probability distributions. It is often used to model the tails of another distribution. It is specified by three parameters: location $\mu$ , scale $\sigma$ , and shape $\x_i$
 
 ```{python}
+#| label: dists-14
 bokeh.io.output_notebook(hide_banner=True)
 from scipy.stats import genpareto
 
@@ -534,6 +548,7 @@ f(y \mid \nu, \mu, \sigma) = \frac{\Gamma\left(\frac{\nu+1}{2}\right)}{\Gamma\le
 $$ {#eq-t-pdf}
 
 ```{python}
+#| label: dists-15
 bokeh.io.output_notebook(hide_banner=True)
 from scipy.stats import t
 
@@ -557,6 +572,7 @@ show(gridplot([p7], ncols=1, width=400, height=400, toolbar_location=None))
 # Normal Distribution
 
 ```{python}
+#| label: dists-16
 #| fig-column: screen-inset-right
 #| fig-align: center 
 import numpy as np
@@ -678,6 +694,7 @@ show(column(
 # PDF & CDF Interactive titles 
 
 ```{python}
+#| label: dists-17
 #| fig-column: screen-inset-right
 #| fig-align: center 
 import numpy as np
@@ -803,6 +820,7 @@ show(column(
 # Picture
 
 ```{python}
+#| label: dists-18
 
 from bokeh.plotting import figure, show, output_file
 bokeh.io.output_notebook(hide_banner=True)
